<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_intr_profesor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.a2dam.ad_actividad_4a.IntrProfesorActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/editTextNomProfesor"
        android:hint="@string/nom" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/editTextNomProfesor"
        android:layout_alignParentStart="true"
        android:id="@+id/editTextEdadProfesor"
        android:hint="@string/edad" />

    <Spinner
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEdadProfesor"
        android:layout_alignParentStart="true"
        android:id="@+id/spinnerCicloCursoProfesor" />

    <TextView
        android:text="@string/donde_tutor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinnerCicloCursoProfesor"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:id="@+id/textViewDondeEsTutor" />

    <Spinner
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewDondeEsTutor"
        android:layout_alignParentStart="true"
        android:id="@+id/spinnerTutor" />

    <TextView
        android:text="@string/despacho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewDespacho"
        android:layout_below="@+id/spinnerTutor"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp" />

    <Spinner
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewDespacho"
        android:layout_alignParentStart="true"
        android:id="@+id/spinnerDespacho" />

    <Button
        android:text="@string/guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonInsertarProfesor"
        android:layout_below="@+id/spinnerDespacho"
        android:layout_alignEnd="@+id/textViewDondeEsTutor"
        android:layout_marginTop="24dp" />

    <Button
        android:text="@string/eliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editTextEliminarProfesor"
        android:layout_toEndOf="@+id/editTextEliminarProfesor"
        android:id="@+id/buttonEliminarProfesor" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextEliminarProfesor"
        android:layout_below="@+id/buttonInsertarProfesor"
        android:layout_alignParentStart="true"
        android:hint="@string/id" />
</RelativeLayout>
