<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_intr_estudiant"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.a2dam.ad_actividad_4a.IntrEstudiantActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/editTextNom"
        android:hint="@string/nom" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/editTextEdad"
        android:layout_below="@+id/editTextNom"
        android:layout_alignParentStart="true"
        android:hint="@string/edad" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextEdad"
        android:layout_alignParentStart="true"
        android:id="@+id/spinnerCicloCurso" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:layout_below="@+id/spinnerCicloCurso"
        android:layout_alignParentStart="true"
        android:id="@+id/editTextNotaMedia"
        android:hint="@string/nota_media" />

    <Button
        android:text="@string/guardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonInsertarEstudiante"
        android:layout_below="@+id/editTextNotaMedia"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/editTextEliminarEstudiante"
        android:layout_below="@+id/buttonInsertarEstudiante"
        android:layout_alignParentStart="true"
        android:hint="ID" />

    <Button
        android:text="@string/eliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonEliminarEstudiante"
        android:layout_alignTop="@+id/editTextEliminarEstudiante"
        android:layout_toEndOf="@+id/editTextEliminarEstudiante" />
</RelativeLayout>
