<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.a2dam.ad_actividad_4a.MainActivity">

    <Button
        android:text="@string/introducir_estudiante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/btn_introducir_estudiante" />

    <Button
        android:text="@string/introducir_profesor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_introducir_estudiante"
        android:layout_alignParentStart="true"
        android:id="@+id/btn_introducir_profesor" />

    <Button
        android:text="@string/eliminar_DB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_introducir_profesor"
        android:layout_alignParentStart="true"
        android:id="@+id/btn_eliminar_DB" />
</RelativeLayout>
