<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_consultas"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.a2dam.ad_actividad_4a.ConsultasActivity">

    <TextView
        android:text="@string/buscar_por"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewBusqueda1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_busqueda1"
        android:layout_below="@+id/textViewBusqueda1"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/devolver"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewBusqueda2"
        android:layout_below="@+id/spinner_busqueda1"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textViewBusqueda2"
        android:layout_alignParentStart="true"
        android:id="@+id/spinner_busqueda2" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_busqueda2"
        android:layout_alignParentStart="true"
        android:id="@+id/layout_campos_busqueda"
        android:layout_margin="20dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editTextConsulta" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner_consulta" />
    </LinearLayout>

    <Button
        android:text="@string/consultar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_busqueda"
        android:layout_below="@+id/layout_campos_busqueda"
        android:layout_alignParentStart="true" />

    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/btn_busqueda"
        android:layout_alignParentStart="true"
        android:id="@+id/recyclerConsultas" />
</RelativeLayout>
